# aegis-stack

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CNAME  GEMINI.md  Makefile  README.md  aegis_ja_review.csv  aegis_ko_full_review.csv  aegis_ko_review.csv  aegis_zh_Hant_review.csv  copier.yml  index.html  llms.txt  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/agents/: aegis-docs-updater.md  test-specialist.md  type-specialist.md
.claude/skills/: README.md
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: agent-task.yml
.github/workflows/: ci.yml  copier-canary.yml  docs.yml  release.yml  security.yml  stack-matrix.yml
CLAUDE/: index.html
about/: index.html
aegis/: __init__.py  __main__.py  constants.py
aegis/cli/: brand.py  build_plan.py  callbacks.py  guided.py  interactive.py  utils.py  validation.py  validators.py
aegis/commands/: add.py  add_service.py  components.py  deploy.py  ingress.py  init.py  plugins.py  remove.py  remove_service.py  services.py  update.py  version.py
aegis/config/: defaults.py  shared_files.py
aegis/core/: CLAUDE.md  ai_service_parser.py  auth_service_parser.py  component_files.py  components.py  copier_manager.py  copier_updater.py  dependency_resolver.py  file_manifest.py  insights_service_parser.py  manual_updater.py  migration_generator.py  migration_spec.py  option_spec.py  plugin_compat.py  plugin_composer.py  plugin_discovery.py  plugin_scaffold.py  plugin_spec.py  plugin_template_resolver.py  post_gen_tasks.py  project_map.py  service_resolver.py  services.py  template_cleanup.py  template_generator.py  version_compatibility.py
aegis/i18n/: __init__.py  registry.py
aegis/templates/: CLAUDE.md
cli-reference/: index.html
components/: index.html
components/backend/: index.html
components/database/: index.html
components/frontend/: index.html
components/ingress/: index.html
components/observability/: index.html
components/scheduler/: index.html
components/web-frontend/: index.html
components/webserver/: index.html
components/worker/: index.html
data/: app.db
demos/: aegis-ai-demo.tape  aegis-demo.tape  aegis-evolution-demo.tape
demos/tapes/: cli-demo.tape  illiana-systems-report-v2.tape  illiana-systems-report.tape
deployment/: index.html
docs/: CLAUDE.md  about.md  cli-reference.md  evolving-your-stack.md  index.md  installation.md  integration-patterns.md  philosophy.md  process.md  technology.md  upgrading.md  versioning.md
docs/components/: database.md  frontend.md  index.md  ingress.md  observability.md  scheduler.md  webserver.md
docs/deployment/: index.md
docs/development/: releases.md
docs/javascripts/: feedback.js  mermaid-config.js
docs/overrides/: main.html
docs/overseer/: index.md  integration.md  story.md
docs/services/: auth.md  dashboard.md  index.md
docs/stylesheets/: custom.css
evolving-your-stack/: index.html
installation/: index.html
integration-patterns/: index.html
overrides/: main.html
overseer/: index.html
overseer/integration/: index.html
overseer/story/: index.html
process/: index.html
scripts/: gen_docs.py
search/: search_index.json
services/: index.html
services/ai/: index.html
services/auth/: index.html
services/blog/: index.html
services/comms/: index.html
services/insights/: index.html
services/payment/: index.html
stylesheets/: custom.css
technology/: index.html
tests/: CLAUDE.md  conftest.py  test_runtime_dependencies.py  test_serve_port_autodiscovery.py  test_template_parity.py
tests/cli/: conftest.py  test_add_command.py  test_add_plugin_resolver_integration.py  test_add_service_auth_regen.py  test_add_service_importable.py  test_add_service_migrations.py  test_add_service_preserves_state.py  test_add_worker.py  test_add_worker_backend.py  test_ai_configuration.py  test_auth_service_generation.py  test_brand_palette_parity.py  test_cli_basic.py  test_cli_init.py  test_component_dependencies.py  test_database_config.py  test_database_runtime.py  test_database_runtime_postgres.py  test_deploy_helpers.py  test_error_handling.py  test_generated_skills.py  test_generated_skills_footprint.py  test_generated_skills_update.py  test_guided.py  test_interactive_project_selection.py  test_interactive_scheduler.py  test_interactive_service_selection.py  test_issue_686_integration.py  test_issue_715_shared_file_divergence.py  test_issue_715_three_way_merge.py  test_issue_814_add_parity.py  test_issue_870_dockerfile_regen.py  test_issue_870_warn_only_regeneration.py  test_model_imports.py  test_plugins_command.py  test_plugins_create_command.py  test_plugins_update_command.py  test_post_gen_worker_cleanup.py  test_python_version.py  test_remove_command.py  (+14 more)
tests/config/: test_defaults.py
tests/core/: test_ai_service_parser.py  test_auth_service_parser.py  test_blog_template_render.py  test_claude_md_render.py  test_component_files.py  test_component_utils.py  test_constants_usage.py  test_copier_answers_placement.py  test_copier_updater.py  test_file_manifest.py  test_file_mapping_derivation.py  test_htmx_component.py  test_htmx_template_render.py  test_i18n.py  test_ingress_component.py  test_insights_service_parser.py  test_issue_686_reconciliation.py  test_manual_updater_plugins.py  test_manual_updater_service.py  test_migrate_fix.py  test_migration_generator.py  test_migration_spec.py  test_observability_oom_renders.py  test_option_spec.py  test_plugin_compat.py  test_plugin_discovery.py  test_plugin_render_parity.py  test_plugin_resolver.py  test_plugin_scaffold.py  test_plugin_spec.py  test_plugin_template_resolver.py  test_plugin_wiring.py  test_post_gen_tasks.py  (+7 more)
tests/fixtures/aegis_plugin_test/: __init__.py  pyproject.toml
tests/fixtures/aegis_plugin_test/src/aegis_plugin_test/: spec.py
tests/fixtures/aegis_plugin_test/src/aegis_plugin_test/templates/{{ project_slug }}/app/services/test_plugin/: __init__.py.jinja
tests/fixtures/aegis_plugin_test/templates/{{ project_slug }}/app/services/test_plugin/: service.py.jinja
(+1039 files in other folders)
